// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submenu props :disabled 1`] = `<li class="t-submenu t-is-disabled"></li>`;

exports[`Submenu props :name 1`] = `<li class="t-submenu" name="1"></li>`;

exports[`Submenu slot <default> 1`] = `
<li class="t-submenu">
  <div class="t-menu__item"><span class="t-menu__content"></span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow" style="transform: rotate(0deg);">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg></div>
  <ul class="t-menu__sub" style="--padding-left: 44px;">
    <div></div>
  </ul>
</li>
`;

exports[`Submenu slot <icon> 1`] = `
<li class="t-submenu">
  <div class="t-menu__item">
    <div></div><span class="t-menu__content"></span>
  </div>
  <ul class="t-menu__sub" style="--padding-left: 44px;"></ul>
</li>
`;

exports[`Submenu slot <title> 1`] = `
<li class="t-submenu">
  <div class="t-menu__item"><span class="t-menu__content"><div></div></span></div>
  <ul class="t-menu__sub" style="--padding-left: 44px;"></ul>
</li>
`;
